# machine_learning_sadia_awan_mlops25

./: README.md  main.py  pyproject.toml
code-alongs/: test.ipynb
code-alongs/03_linear_regression/: linear_regression.ipynb
code-alongs/04_logistic_regression/: logistic_regression.ipynb  logistic_regression_CLASS.ipynb
code-alongs/05_knn/: knn.ipynb  knn_CLASS.ipynb
code-alongs/06_random_forest/: random_forest.ipynb  random_forest_CLASS.ipynb
code-alongs/06_random_forest/extra/: decision_tree.ipynb
code-alongs/07_pydantic/: README.md  a)_pydantic_basics.ipynb  person.json  pydantic_basics_CLASS.ipynb
code-alongs/08_fastapi_crud/: api.py  constants.py  data_processing.py  test_api_CLASS.ipynb
code-alongs/10_fastapi_data/: api.py  api_CLASS.py  data_processing.py  data_processing_CLASS.py  eda.ipynb  eda_CLASS.ipynb
code-alongs/11_fastapi_ml_model/: README.md  api.py  constants.py  explorations.ipynb  frontend.py  model_development.ipynb  random_forest.ipynb
code-alongs/11_fastapi_sklearn/: api.py  constants.py  data_models.py  frontend.py
code-alongs/a1_pandas_repetition/: pandas_repetition.ipynb
code-alongs/a3_packaging/: pyproject.toml
code-alongs/a3_packaging/src/a3_packaging/: __init__.py
code-alongs/a3_packaging/src/a3_packaging/backend/: api.py  data_processing.py
code-alongs/a3_packaging/src/a3_packaging/frontend/: dashboard.py
code-alongs/a3_packaging/src/a3_packaging/model_development/: eda.ipynb  testing_models.ipynb
code-alongs/a3_packaging/src/a3_packaging/utils/: helpers.py
explorations/: exercise_1.ipynb
(+17 files in other folders)
